2004-03-25	blytkerchan
	* memdup.c: new file
	* memdup.h: ditto
	* macros.h: new file

2004-02-10	blytkerchan
	* strlwr.c (strlwr): fix endless loop

2004-02-03	blytkerchan
	* strlwr.h: new file

	* Makefile.am: new file
	* memcmp.c: ditto

	* strlwr.c: new file
	* AUTHORS: ditto
