@@ -1,0 +1,6 @@
+#ifndef _LIBREPLACE_CATSTR_H
+#define _LIBREPLACE_CATSTR_H
+
+char * catstr(char * str1, char * str2);
+
+#endif // _LIBREPLACE_CATSTR_H
